# cpptemplate

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
sources/: main.cpp
